--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/identifiers.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/identifiers.ejs
@@ -1,4 +1,4 @@
-<% include(`${template.rootDirectory}/utils`); -%>
+<% include('utils'); -%>
 <!-- identifiers.ejs -->
 <h1>References</h1>
 <div class="identifiers-wrap">
