--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/layout.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<% include(`${template.rootDirectory}/utils`); -%>
+<% include('utils'); -%>
 <html>
   <head>
     <meta charset="utf-8" />
