--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/properties.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/properties.ejs
@@ -1,4 +1,4 @@
-<% include(`${template.rootDirectory}/utils`); -%>
+<% include('utils'); -%>
 <!-- properties.ejs -->
 <div data-ice="properties">
   <%
