--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/source.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/source.ejs
@@ -1,4 +1,4 @@
-<% include(`${template.rootDirectory}/utils`); -%>
+<% include('utils'); -%>
 <!-- source.ejs -->
 <h1>Source <img data-ice="coverageBadge" src="./badge.svg"><%
   if(coverage)
