--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/test.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/test.ejs
@@ -1,4 +1,4 @@
-<% include(`${template.rootDirectory}/utils`); _%>
+<% include('utils'); -%>
 <!-- test.ejs -->
 <% function renderTestCase(test, depth = 0)
 { -%>
