--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/manualIndex.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/manualIndex.ejs
@@ -1,4 +1,4 @@
-<% include(`${template.rootDirectory}/utils`); -%>
+<% include('utils'); -%>
 <!-- manualIndex.ejs -->
 <div>
   <div data-ice="manual">
