refactor: adds name of class to console message

--- a/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/class.ejs
+++ b/packages/esdoc-publish-html-plugin/src/html-template/ESDoc-v2/class.ejs
@@ -140,7 +140,7 @@
     <h4>Indirect Implements:</h4>
   </div>
   <div><%
-    console.log('\nHey asshole, implement cls.indirectImplementsData in class.ejs\n');
+    console.log('\nHey asshole, implement cls.indirectImplementsData in class.ejs', cls.name, '\n');
     %>
     <span style="background-color: red; color: white;">Tell myself to implement this!</span>
   </div>
@@ -165,7 +165,7 @@
       <h4>Indirect Implemented:</h4>
     </div>
     <div><%
-      console.log('\nHey asshole, implement cls.indirectImplementedData in class.ejs\n');
+      console.log('\nHey asshole, implement cls.indirectImplementedData in class.ejs', cls.name, '\n');
       %>
       <span style="background-color: red; color: white;">Tell myself to implement this!</span>
     </div>
